Smaller font size for the map title and fixed alignment.

--- a/client/app/offices/offices.scss
+++ b/client/app/offices/offices.scss
@@ -28,7 +28,7 @@
     transition: opacity 0.5s ease;
 
     .info-title {
-      font-size: 50px;
+      font-size: 40px;
       fill: #ffcc00;
       stroke: #ffcc00;
       shape-rendering: crispEdges;
